syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.utm.common.rcp.notifier";
package com.utm.common;

service Notifier
{
  rpc notify(NotifyRequest) returns (NotifyResponse);
}

message NotifyRequest
{
  string topic = 1;
  string content = 2;
}

message NotifyResponse
{
  bool isSuccess = 1;
}